[package]
name = "opendid"
authors = ["KILT <info@kilt.io>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sara"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-session ={version = "0.7", features = ["cookie-session"]}
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
actix-cors = "0.6.4"
subxt = "0.31.0"
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = "24.0.0"
serde_cbor = "0.11.2"
base58 = "0.2.0"
sodiumoxide = "0.2.7"
clap = { version = "4.3.5", features = ["derive"] }
schnorrkel = { version = "0.10.2", features = ["preaudit_deprecated", "u64_backend"], default-features = false }
env_logger = "0.10.0"
log = "0.4.19"
serde_with = "3.0.0"
serde_yaml = "0.9.21"
uuid = { version = "1.3.4", features = ["v4"] }
lazy_static = "1.4.0"
jwt = "0.16.0"
chrono = { version = "0.4.26", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.7"
blake2 = "0.10.6"
actix-files = "0.6.2"
etcd-client = { version = "0.11.1", features = ["tls"] }
clap-verbosity-flag = "2.0.1"
