[package]

authors = ["KILT <info@kilt.io>"]
edition = "2021"
name = "opendid"
version = "0.1.0"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
anyhow = "1.0.75"
base58 = "0.2.0"
base64 = "0.21.2"
blake2 = "0.10.6"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.5", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
etcd-client = { version = "0.11.1", features = ["tls"] }
hex = "0.4.3"
hmac = "0.12.1"
jwt = { version = "0.16.0", features = ["openssl"] }
lazy_static = "1.4.0"
log = "0.4.19"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.18.0"
openssl = "0.10.57"
rand = "0.8.5"
rhai = { version = "1.15.1", features = ["serde", "sync"] }
schnorrkel = { version = "0.10.2", features = [
    "preaudit_deprecated",
    "u64_backend",
], default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.97"
serde_with = "3.0.0"
serde_yaml = "0.9.21"
sha2 = "0.10.7"
sodiumoxide = "0.2.7"
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = "24.0.0"
subxt = "0.31.0"
tokio = { version = "1.9.0", features = ["rt-multi-thread"] }
uuid = { version = "1.3.4", features = ["v4"] }

[features]
default = []
peregrine = []

[[bin]]
name = "opendid_peregrine"
path = "src/main.rs"
required-features = ["peregrine"]

[[bin]]
name = "opendid_spiritnet"
path = "src/main.rs"
