[package]

authors = ["KILT <info@kilt.io>"]
edition = "2021"
name = "opendid"
version = "0.1.0"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web = "4"
anyhow = "1.0.86"
base58 = "0.2.0"
base64 = "0.22.1"
blake2 = "0.10.6"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
etcd-client = { version = "0.12.4", features = ["tls"] }
hex = "0.4.3"
hmac = "0.12.1"
jwt = { version = "0.16.0", features = ["openssl"] }
lazy_static = "1.4.0"
log = "0.4.21"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19.0"
openssl = "0.10.64"
rand = "0.8.5"
rhai = { version = "1.18.0", features = ["serde", "sync"] }
schnorrkel = { version = "0.11.4", features = [
    "preaudit_deprecated",
], default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.117"
serde_with = "3.8.1"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sodiumoxide = "0.2.7"
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = "24.0.0"
subxt = "0.31.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
url = { version = "2.5.0",  features = ["serde"]}
uuid = { version = "1.8.0", features = ["v4"] }

[features]
default = []
peregrine = []

[[bin]]
name = "opendid_peregrine"
path = "src/main.rs"
required-features = ["peregrine"]

[[bin]]
name = "opendid_spiritnet"
path = "src/main.rs"
